@@ -13,6 +13,9 @@
   if they require a parameter.
 - Bugfix: Prevent the calling of configured debug methods which are
   callable, but do not exist thanks to the __call() function.
+- Bugfix / Change: When kreXX encounters an emergency break, the
+  frontend configuration will be accessible, giving the dev the
+  opportunity to change the settings.
 
 1.3.6
 - Added scope analysis. Protected an private variables are treated
